[gd_scene load_steps=3 format=3 uid="uid://c3q74aq55byq8"]

[ext_resource type="Script" path="res://lvl_passed.gd" id="1_x37dk"]
[ext_resource type="FontFile" uid="uid://u1vsud4ac057" path="res://fonts/XTypewriter-Regular.ttf" id="2_0xfo1"]

[node name="lvl_passed" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x37dk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 211.0
offset_right = 250.0
offset_bottom = 280.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Уровень пройден!
"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="totalPoints" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Очков заработано: ..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="restartBtn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_0xfo1")
theme_override_font_sizes/font_size = 35
text = "Рестарт"

[node name="menuBtn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_0xfo1")
theme_override_font_sizes/font_size = 35
text = "Меню"

[connection signal="pressed" from="Panel/VBoxContainer/restartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/menuBtn" to="." method="_on_menu_btn_pressed"]
